cmake_minimum_required(VERSION 3.27)
project(test)

set(CMAKE_CXX_STANDARD 14)

add_executable(test
        "ac 789.cpp"
        ac796.cpp
        ac1205.cpp
        ac1211.cpp
        ac1216.cpp
        ac2.cpp
        ac1210.cpp
        ac1236.cpp
        ac1245.cpp
        ac1204.cpp
        ac466.cpp
        ac787.cpp
        ac1238.cpp
        ac1101.cpp
        ac1113.cpp
        ac1224.cpp
        ac1055.cpp
        ac104.cpp
        ac122.cpp
        ac112.cpp
        ac1240.cpp
        ac1249.cpp
        ac836.cpp
        ac240.cpp
        ac797.cpp
        ac798.cpp
        ac100.cpp
        ac3498.cpp
        ac1229.cpp
        ac3218.cpp
        ac503.cpp
        ac1227.cpp
        ac5407.cpp
        ac4656.cpp
        ac102.cpp
        ac1233.cpp
        ac788.cpp
        ac1112.cpp
        ac4407.cpp
        ac846.cpp
        ac1413.cpp
        ac830.cpp
        ac154.cpp
        ac875.cpp
        ac504.cpp
        ac1289.cpp
        ac4968.cpp
        ac1290.cpp
        ac4199.cpp
        ac872.cpp
        ac1246.cpp
        ac1223.cpp
        ac1016.cpp
        ac897.cpp
        ac5406.cpp
        ac4964.cpp
        ac1388.cpp
        ac282.cpp
        ac1222.cpp
        ac320.cpp
        ac4996.cpp
        ac4997.cpp
        ac4956.cpp
        ac4957.cpp
        ac4965.cpp
        ac4966.cpp
        ac1265.cpp
        ac1264.cpp
        ac4660.cpp
        ac4658.cpp
        ac4645.cpp
        ac4659.cpp
        ac4646.cpp
        ac4649.cpp
        ac4261.cpp
        ac2868.cpp
        ac1343.cpp
        ac803.cpp
        ac869.cpp
        ac850.cpp
        ac1172.cpp
        test.cpp
        t2.cpp
        ac99.cpp
        ac4655.cpp
        ac4262.cpp
        ac3745.cpp
        ac2816.cpp
        ac4405.cpp
        ac422.cpp
        ac1360.cpp
        ac1225.cpp
        ac1209.cpp
        ac97.cpp
        ac2060.cpp
        ac1355.cpp
        ac844.cpp
        ac845.cpp
        ac179.cpp
        ac528.cpp
        ac837.cpp
        ac2069.cpp
        ac1250.cpp
        ac687.cpp
        ac201.cpp
        ac874.cpp
        ac3377.cpp
        ac3491.cpp
        ac197.cpp
        ac3497.cpp
        ac868.cpp
        ac1356.cpp
        ac135.cpp
        ac1375.cpp
        ac851.cpp
        ac1134.cpp
        ac168.cpp
        ac643.cpp
        ac3224.cpp
        ac5396.cpp
        ac800.cpp
        ac799.cpp
        ac1207.cpp
        ac871.cpp
        CAT02.cpp
        qsort.cpp
)
